--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   sizer: ^2.0.15
   lottie: ^2.6.0
   pinput: ^3.0.0
+  morphable_shape: ^1.6.6
+  animated_text_kit: ^4.2.2
+  marquee: ^2.2.3
+  awesome_dialog: ^3.1.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
